Split organization and user registration
