# src/Modules/Identity/Axis.Identity.Application/Commands/RegisterUser/RegisterUserCommandValidator.cs
@@ -35,5 +35,8 @@ public sealed class RegisterUserCommandValidator : AbstractValidator<RegisterUse
 
         RuleFor(x => x.PasswordConfirmation)
             .Equal(x => x.Password).WithMessage("Password confirmation must match password.");
+
+        RuleFor(x => x.OrganizationSetupToken)
+            .MaximumLength(512);
     }
 }
